adding conditional nav options

--- a/views/layouts/nav-layout.pug
+++ b/views/layouts/nav-layout.pug
@@ -18,10 +18,11 @@ html(lang="en")
                a.nav__link(href="/cart" class=(path === '/cart' ? 'nav__active' : '')) Cart
             li.nav__item
                a.nav__link(href="/orders" class=(path === '/orders' ? 'nav__active' : '')) Orders
-            li.nav__item
-               a.nav__link(href="/admin/add-product" class=(path === '/admin/add-product' ? 'nav__active' : '')) Add Products
-            li.nav__item
-               a.nav__link(href="/admin/view-product" class=(path === '/admin/view-product' ? 'nav__active' : '')) View Products
+            if (isAuthenticated)
+               li.nav__item
+                  a.nav__link(href="/admin/add-product" class=(path === '/admin/add-product' ? 'nav__active' : '')) Add Products
+               li.nav__item
+                  a.nav__link(href="/admin/view-product" class=(path === '/admin/view-product' ? 'nav__active' : '')) View Products
          ul.nav__list
             li.nav__item
                a.nav__link(href="/login" class=(path === '/login' ? 'nav__active' : '')) Login
